# IOPManager

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ZipArchive/: CMakeLists.txt  ZipArchive.cpp  ZipArchive.sln  ZipArchive.vcproj  ZipArchive.vcxproj  ZipArchive.vcxproj.filters  ZipCollections_stl.h  ZipFileHeader.cpp  ZipStorage.h  std_mfc.h
